# ai-voice-agent-bootstrap

./: .gitignore  LICENSE  README.md
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  post-create.sh
backend/: .env.example  README.md  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  main.py
backend/app/api/: __init__.py  health.py  moderator.py  routes.py  sessions.py
backend/app/prompts/: agent_persona.md  moderator_instructions.md  survey_checklist.md
backend/app/schemas/: moderator.py  sessions.py
backend/app/services/: azure_realtime.py  moderator_engine.py  openai_realtime.py  prompt_builder.py  provider_factory.py  realtime_provider.py
frontend/: .env.example  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  config.ts  global.d.ts
frontend/src/components/Controls/: Controls.module.css  Controls.tsx
frontend/src/components/ModeratorCard/: ModeratorCard.module.css  ModeratorCard.tsx
frontend/src/components/SessionLayout/: SessionLayout.module.css  SessionLayout.tsx
frontend/src/components/StatusBanner/: StatusBanner.module.css  (+1 more)
frontend/src/hooks/: useAudioLevel.ts
frontend/src/services/: apiClient.ts  moderatorClient.ts  moderatorOrchestrator.ts  transcriptBuffer.ts  webrtcClient.ts
frontend/src/state/: moderatorStore.ts  sessionStore.ts
frontend/src/styles/: globals.css
frontend/src/types/: index.ts  moderator.ts  session.ts  transcript.ts
frontend/src/utils/: moderatorGuidance.ts  surveyConfig.ts
scripts/: run_backend.sh  run_frontend.sh
(+4 files in other folders)
