[project]
name = "ai-voice-agent-bootstrap-backend"
version = "0.1.0"
description = "Teaching backend for AI Voice Agent Bootstrap"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.3.0",
  "aiohttp>=3.10.0",
  "httpx>=0.27.0",
  "python-dotenv>=1.0.0",
  "openai>=1.52.0",
]


[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
